--- a/index.html
+++ b/index.html
@@ -98,6 +98,64 @@
   </header>
   <!--Main Navigation-->
 
+
+  <!--Section: Design Block-->
+  <section class="mb-8">
+    <style>
+      .cascading-left {
+        margin-left: -50px;
+      }
+
+      @media (max-width: 991.98px) {
+        .cascading-left {
+          margin-left: 0;
+        }
+      }
+
+      .custom-height {
+        height: 500px;
+      }
+
+      @media (max-width: 500px) {
+        .custom-height {
+          height: 650px;
+        }
+      }
+
+      .custom-mt {
+        margin-top: -240px;
+      }
+
+      @media (max-width: 500px) {
+        .custom-mt {
+          margin-top: -420px;
+        }
+      }
+    </style>
+    <div class="custom-height" style="background-color: #efeff2;">
+
+    </div>
+    <div class="container custom-mt">
+      <div class="row g-0 align-items-center">
+        <div class="col-lg-7 mb-4 mb-lg-0">
+          <img src="https://i.epochtimes.com/assets/uploads/2022/01/id13536586-536099-450x300.jpg" class="w-100 rounded-6" alt="Italian city" />
+        </div>
+        <div class="col-lg-5">
+          <div class="card cascading-left rounded-6 shadow-5">
+            <div class="card-body px-4 p-4 p-md-5 p-lg-4 p-xl-5">
+              <h1 class="mb-4">瑞豐夜市介紹</h1>
+              <p class="text-muted mb-4">瑞豐夜市起源於1980年代，經遷移後，2000年定址裕誠路與南屏路交會處
+                擁有1000多家攤販，規劃為「L」型，靠近巨蛋商圈，交通便利，成為高雄人氣夜市之一 <span class="d-none d-xl-inline"></span></p>
+              <button class="btn btn-warning" data-mdb-ripple-init>Read more <i
+                  class="fas fa-angle-right ms-1"></i></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--Section: Design Block-->
+
   <!--Main layout-->
   <main class="my-5">
     <div class="container">
@@ -116,13 +174,9 @@
           </div>
 
           <div class="col-md-8 mb-4">
-            <h5>Very long post title</h5>
+            <h1>攤位介紹</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatibus ratione necessitatibus itaque error alias
-              repellendus nemo reiciendis aperiam quisquam minus ipsam
-              reprehenderit commodi ducimus, in dicta aliquam eveniet
-              dignissimos magni.
+              來自不同的文化的特色美食
             </p>
 
             <button type="button" class="btn btn-primary btn-rounded" data-mdb-ripple-init>Read</button>
