--- a/index.html
+++ b/index.html
@@ -25,10 +25,28 @@
     <!-- 自訂義 -->
     <link rel="stylesheet" href="./css/style.css" />
     <!-- Custom styles -->
-    <style></style>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');
+
+
+
+body{
+          font-family: "Oswald", sans-serif;
+           font-weight: 800;
+}
+
+
+
+
+
+
+    </style>
   </head>
 
 <body>
+
+
+
   <!--Main Navigation-->
   <header>
     <!-- Navbar -->
@@ -146,12 +164,7 @@
               <h1 class="mb-4">瑞豐夜市介紹</h1>
               <p class="text-muted mb-4">瑞豐夜市起源於1980年代，經遷移後，2000年定址裕誠路與南屏路交會處
                 擁有1000多家攤販，規劃為「L」型，靠近巨蛋商圈，交通便利，成為高雄人氣夜市之一 <span class="d-none d-xl-inline"></span></p>
-              <button class="btn btn-warning" data-mdb-ripple-init>Read more <i
-                  class="fas fa-angle-right ms-1"></i></button>
-            </div>
-          </div>
-        </div>
-      </div>
+
     </div>
   </section>
   <!--Section: Design Block-->
@@ -278,31 +291,12 @@
                     ">
       <!-- Left -->
       <div class="me-5 d-none d-lg-block">
-        <span>Get connected with us on social networks:</span>
+        <span>關於我們</span>
       </div>
       <!-- Left -->
 
       <!-- Right -->
-      <div>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-google"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-github"></i>
-        </a>
-      </div>
+
       <!-- Right -->
     </section>
     <!-- Section: Social media -->
@@ -316,12 +310,10 @@
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
             <h6 class="text-uppercase fw-bold mb-4">
-              <i class="fas fa-gem me-3"></i>Company name
+              <i class="fas fa-location-dot me-2"></i>瑞豐夜市地址
             </h6>
             <p>
-              Here you can use rows and columns to organize your footer
-              content. Lorem ipsum dolor sit amet, consectetur adipisicing
-              elit.
+              813高雄市左營區裕誠路南屏路
             </p>
           </div>
           <!-- Grid column -->
@@ -329,52 +321,39 @@
           <!-- Grid column -->
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">Products</h6>
+            <h6 class="text-uppercase fw-bold mb-4">
+              <i class="fas fa-phone me-2"></i>電話</h6>
             <p>
-              <a href="#!" class="text-reset">Dresses</a>
+              <a href="#!" class="text-reset">0987587111</a>
             </p>
-            <p>
-              <a href="#!" class="text-reset">Skirts</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Jeans</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Accessories</a>
-            </p>
+
           </div>
           <!-- Grid column -->
 
           <!-- Grid column -->
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">Useful links</h6>
-            <p>
-              <a href="#!" class="text-reset">Pricing</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Settings</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Orders</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Help</a>
-            </p>
+            <h6 class="text-uppercase fw-bold mb-4">
+              <i class="fab fa-facebook-f me-2"></i>粉專</h6>
+            <div>
+              <a href="https://www.facebook.com/rfoodie2.0" class="me-4 text-reset">
+                <p>臉書</p>
+              </a>
+            </div>
+
           </div>
           <!-- Grid column -->
 
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-            <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+            <h6 class="text-uppercase fw-bold mb-4">xxx</h6>
+            <p><i class="fas fa-home me-3"></i> XXX</p>
             <p>
               <i class="fas fa-envelope me-3"></i>
-              info@example.com
+              xxx
             </p>
-            <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-            <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+
           </div>
           <!-- Grid column -->
         </div>
