--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body{
 
 
   <!--Main Navigation-->
-  <header>1
+  <header>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light " style="background-color:#bae8e8;">
       <div class="container">
@@ -68,7 +68,7 @@ body{
               <a class="nav-link" aria-current="page" href="#intro">首頁</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="" rel="nofollow" target="_blank">消息</a>
+              <a class="nav-link" href="" rel="nofollow" target="_blank">消息news</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://www.youtube.com/watch?v=GFfodTXiQ-w" target="_blank">攤位介紹</a>
