--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body{
   <nav class="navbar navbar-expand-lg navbar-dark"
        style="background-color:lab(24.1% -0.88 -27.79);">
     <div class="container">
-      
+
       <!-- Navbar brand -->
       <a class="navbar-brand text-white" target="_blank"
          href="https://mdbootstrap.com/docs/standard/">
@@ -418,6 +418,19 @@ body{
 
 
 
+<img src="./img/map.png" class="img-fluid mb-200" />
+<a href="#!">
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -497,7 +510,7 @@ body{
 
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: hsla(0, 0%, 17%, 0.04)">
-     
+
       <a class="text-reset fw-bold" href="https://mdbootstrap.com/"></a>
     </div>
     <!-- Copyright -->
